policies/egress-from-netshoot.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netshoot-to-nginx-egress
  namespace: client
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: client
          podSelector:
            matchLabels:
              app: client-server
              tier: frontend
      ports:
        - protocol: TCP
          port: 80
