policies/egress-from-redis-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-from-redis-client
  namespace: core
spec:
  podSelector:
    matchLabels:
      app: redis-client
      tier: client
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: core
          podSelector:
            matchLabels:
              app: db
              tier: backend
      ports:
        - protocol: TCP
          port: 6379
