policies/ingress-to-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-api
  namespace: core
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: client
          podSelector:
            matchLabels:
              app: client-server
              tier: frontend
      ports:
        - protocol: TCP
          port: 80
